@@ -542,6 +542,9 @@ Trunk (Unreleased)
 
     HADOOP-9043. Disallow in winutils creating symlinks with forwards slashes.
     (Chris Nauroth and Arpit Agarwal via suresh)
+
+    HADOOP-9483. winutils support for readlink command.
+    (Arpit Agarwal via suresh)
     
 Release 2.0.5-beta - UNRELEASED
 
